--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <!-- <auth-form-controller></auth-form-controller> -->
 
-
+<div>
+  <label>
+    Credit Card Number
+    <input
+      name="credit-card"
+      type="text"
+      placeholder="Enter your 16-digit card number"
+      credit-card
+    />
+  </label>
+</div>
