--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- <auth-form-controller></auth-form-controller> -->
 
-<third-container></third-container>
+<!-- <third-container></third-container> -->
+
+
+<stock-inventory></stock-inventory>
