add to stock functionality added

--- a/src/app/stock-inventory/containers/stock-inventory.container.html
+++ b/src/app/stock-inventory/containers/stock-inventory.container.html
@@ -2,14 +2,9 @@
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <!-- Send main form to component. @input parent in component-->
     <stock-branch [parent]="form"> </stock-branch>
-
+    <stock-selector [parent]="form" [products]="products" (added)="addStock($event)"> </stock-selector>
     <stock-products [parent]="form"> </stock-products>
-    <stock-selector [parent]="form"> </stock-selector>
 
-    <!-- <div formGroupName="store">
-      <input type="text" placeholder="Branch ID" formControlName="branch" />
-      <input type="text" placeholder="Manager Code" formControlName="code" />
-    </div> -->
     <div class="stock-inventory__buttons">
       <button type="submit" [disabled]="form.invalid">
         Order stock
