--- a/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
+++ b/src/app/stock-inventory/components/stock-selector/stock-selector.component.html
@@ -1,1 +1,20 @@
-<div class="stock-selector" [formGroup]="parent"></div>
+<div class="stock-selector" [formGroup]="parent">
+  <div formGroupName="selector">
+    <select formControlName="product_id">
+      <option value="">Select stock</option>
+      <!-- Grab product id but render only the name -->
+      <option *ngFor="let product of products" [value]="product.id">
+        {{ product.name }}
+      </option>
+    </select>
+    <input
+      type="number"
+      step="10"
+      min="10"
+      max="1000"
+      formControlName="quantity"
+    />
+    <!-- type button instead of submit. Because at this point we dont want to submit the form yet -->
+    <button type="button" (click)="onAdd()">Add stock</button>
+  </div>
+</div>
